# agentic-qa-lab

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
apps/dashboard/: app.py
docs/: api.md  architecture.md  index.md  usage.md
examples/: local_login_demo.py  simple_form_task.py
examples/pages/: login.html  login.js
notebooks/: vision_observation_modes.ipynb
src/agentic_qa_lab/: __init__.py  cli.py  config.py
src/agentic_qa_lab/agents/: __init__.py  approval.py  base.py  judge.py  llm.py  memory.py  planner.py  reflective.py  rule_based.py  runner.py  self_heal.py  usage.py
src/agentic_qa_lab/api/: __init__.py  app.py  execution.py  storage.py
src/agentic_qa_lab/domain/: __init__.py  action.py  observation.py  result.py  task.py  trace.py
src/agentic_qa_lab/environments/: __init__.py  api_env.py  appium_env.py  base.py  playwright_env.py  selenium_env.py
src/agentic_qa_lab/evaluation/: __init__.py  benchmark.py  metrics.py  recording.py  tasks.py
tasks/: example_login.yaml  example_search.json
tasks/api/: httpbin_get.yaml
tasks/real/: herokuapp_add_remove.yaml  herokuapp_dynamic_controls_enable.yaml  herokuapp_key_presses_enter.yaml  herokuapp_login.yaml  herokuapp_login_logout.yaml  herokuapp_redirect.json
tests/: test_agents.py  test_api.py  test_api_environment.py  test_appium_environment.py  test_approval.py  test_cli.py  test_config.py  test_dashboard.py  test_domain.py  test_e2e.py  test_environments.py  test_evaluation.py  test_judge.py  test_llm.py  test_memory.py  test_planner.py  test_real_tasks.py  test_recording.py  test_reflective.py  test_selenium_environment.py  test_self_heal.py  test_success_detection.py  test_usage.py  test_vision.py
