[tool.poetry]
    name = "agentic-qa-lab"
    version = "0.1.0"
    description = "Autonomous UI and game testing agents."
    authors = ["Diogo Ribeiro <hansolo.dj@gmail.com>"]
    readme = "README.md"
    packages = [{ include = "agentic_qa_lab", from = "src" }]

    [tool.poetry.dependencies]
    python = ">=3.11,<3.13"
pydantic = "^2.8.0"
typer = "^0.12.3"
rich = "^13.7.1"
numpy = "^1.26.4"
pandas = "^2.2.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
playwright = "^1.44.0"
streamlit = "^1.36.0"
pyyaml = "^6.0.1"

    [tool.poetry.group.dev.dependencies]
    pytest = "^8.2.2"
    pytest-cov = "^5.0.0"
    mypy = "^1.10.1"
    ruff = "^0.5.0"
    pre-commit = "^3.7.1"
    nbval = "^0.11.0"
    jupyter = "^1.0.0"

    [build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

    [tool.ruff]
    line-length = 100
    target-version = "py311"

    [tool.ruff.lint]
    select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "C4", "SIM"]
    # ANN401: Any is required at duck-typed adapter boundaries (injected
    # Playwright page / handles). S101: assert is expected in tests.
    ignore = ["ANN101", "ANN102", "ANN401", "S101"]

    [tool.mypy]
    python_version = "3.11"
    strict = true
    warn_unused_ignores = true
    warn_return_any = true
    no_implicit_optional = true

    [[tool.mypy.overrides]]
    module = ["playwright.*"]
    ignore_missing_imports = true

    [tool.pytest.ini_options]
    testpaths = ["tests"]
    pythonpath = ["src"]
    addopts = "--cov=src --cov-report=term-missing"
