[tool.poetry]
    name = "agentic-qa-lab"
    version = "0.1.0"
    description = "Autonomous UI and game testing agents."
    authors = ["Diogo Ribeiro <hansolo.dj@gmail.com>"]
    readme = "README.md"
    packages = [{ include = "agentic_qa_lab", from = "src" }]

    [tool.poetry.scripts]
    agentic-qa = "agentic_qa_lab.cli:app"

    [tool.poetry.dependencies]
    python = ">=3.11,<3.14"
pydantic = "^2.8.0"
typer = "^0.13.1"
# Click 8.2 changed flag handling in a way that breaks Typer's secondary
# (--no-*) flags ("Secondary flag is not valid for non-boolean flag"); pin
# below it to match the supported Typer line.
click = ">=8.1.7,<8.2"
rich = "^13.7.1"
# pandas 2.2.3 is the first release with CPython 3.13 wheels.
pandas = "^2.2.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
playwright = "^1.44.0"
streamlit = "^1.36.0"
pyyaml = "^6.0.1"

    [tool.poetry.group.dev.dependencies]
    pytest = "^8.2.2"
    pytest-cov = "^5.0.0"
    mypy = "^1.10.1"
    types-PyYAML = "^6.0.12"
    ruff = "^0.6.9"
    pre-commit = "^3.7.1"
    nbval = "^0.11.0"
    jupyter = "^1.0.0"

    [build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

    [tool.ruff]
    line-length = 100
    target-version = "py311"
    # Notebooks set up sys.path before imports (E402/I001 by design).
    extend-exclude = ["notebooks"]

    [tool.ruff.lint]
    select = ["E", "F", "I", "B", "UP", "N", "ANN", "S", "C4", "SIM"]
    # ANN401: Any is required at duck-typed adapter boundaries (injected
    # Playwright page / handles). S101: assert is expected in tests.
    ignore = ["ANN101", "ANN102", "ANN401", "S101"]

    [tool.mypy]
    python_version = "3.11"
    strict = true
    warn_unused_ignores = true
    warn_return_any = true
    no_implicit_optional = true
    mypy_path = ["src"]
    files = ["src", "tests", "examples"]

    [[tool.mypy.overrides]]
    module = ["playwright.*"]
    ignore_missing_imports = true

    [tool.pytest.ini_options]
    testpaths = ["tests"]
    pythonpath = ["src"]
    addopts = "--cov=src --cov-report=term-missing"
